workshop now includes rai!

--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -57,10 +57,12 @@
    "source": [
     "## Overview\n",
     "\n",
-    "* Investigate what is possible\n",
-    "* Data pipeline\n",
-    "* The pieces of a UNet\n",
-    "* Training the model"
+    "* What is possible\n",
+    "  * Demonstrate the open source `rai` library\n",
+    "* Building our own 2D UNet\n",
+    "  * Data pipeline\n",
+    "  * The pieces of a UNet\n",
+    "  * Training the model"
    ]
   },
   {
@@ -68,7 +70,43 @@
    "id": "2b456a83-6c72-4f0c-8075-7e0e70a8089a",
    "metadata": {},
    "source": [
-    "## What is possible"
+    "## What is possible with the open source `rai` library\n",
+    "\n",
+    "### Installing and importing the library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f974259-0a58-4e19-a6a7-83e18a6778cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bc1660e-2269-4594-a9c7-2ff3d315eb38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pydicom\n",
+    "pydicom.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebf25251-02eb-4504-97d8-f38f2d6054fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rai==0.2.0-dev0\n",
+    "import rai\n",
+    "rai.__version__"
    ]
   },
   {
@@ -78,17 +116,244 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rai==0.2.0"
+    "import raicontours\n",
+    "from raicontours import TG263\n",
+    "raicontours.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceb21f94-01d0-4f76-8454-9438341d63de",
+   "metadata": {},
+   "source": [
+    "### Loading the model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c230e33a-483d-4071-a834-b9b57d400ff0",
+   "id": "db1bd1cf-c528-4754-88a1-19fb8041b8dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Show the rai model in action"
+    "raicontours.cfg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fd50888-89a4-4bea-8730-1325a4204c49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai_model = rai.load_model(cfg=raicontours.cfg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a7e43d4-ac40-443b-9805-7eee7dffa957",
+   "metadata": {},
+   "source": [
+    "### Downloading some example DICOM data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "939a6bf5-7935-4b13-99d0-73feb95576fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_paths, structure_path = rai.download_deepmind_example(\"data/deepmind\")\n",
+    "structure_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e43a52c2-7bdd-4ee6-9902-f080531f4080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_grid, y_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
+    "    image_paths\n",
+    ")\n",
+    "\n",
+    "image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc5d26b2-e639-414a-a97b-1b3970a45f4c",
+   "metadata": {},
+   "source": [
+    "### Running the inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d8a1897-beb7-4258-abf8-bf8f0d712843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit -n 1 -r 1\n",
+    "\n",
+    "z = [35, 45, 55]\n",
+    "y = [140, 155, 175, 195, 215, 230]\n",
+    "x = [210, 230, 250, 270, 290, 310]\n",
+    "\n",
+    "# Workaround for https://github.com/jupyter/notebook/issues/4532\n",
+    "global predicted_masks\n",
+    "\n",
+    "predicted_masks = rai.inference_over_jittered_grid(\n",
+    "    model=rai_model, image_stack=image_stack, grid=(z, y, x)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2610960-c47f-407e-af28-d039c8bd5bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    x_grid, y_grid, predicted_masks\n",
+    ")\n",
+    "\n",
+    "predicted_contours_by_structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f7c01f-ae73-473f-ba63-c5569e0402ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai.plot_contours_by_structure(\n",
+    "    x_grid, y_grid, image_stack, predicted_contours_by_structure\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8cd7ddb-f4fb-4af1-9370-f11f3d2c4100",
+   "metadata": {},
+   "source": [
+    "### Compare results to the DICOM-RT Structure file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7ae5afe-fddd-485d-b2ea-ed73e13bd303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_ds = pydicom.read_file(structure_path)\n",
+    "[item.ROIName for item in structure_ds.StructureSetROISequence]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967d9d1f-f76d-4a77-a240-baa4beb2fe81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "align_map = {\n",
+    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
+    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
+    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
+    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
+    "    \"Lens-Lt\": [TG263.Lens_L],\n",
+    "    \"Lens-Rt\": [TG263.Lens_R],\n",
+    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
+    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
+    "    # If there was an \"Eyes\" structure, would do the following:\n",
+    "    # \"Eyes\": [TG263.Eye_L, TG263.Eye_R]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74a73803-96f5-48af-a3e1-4287407a5bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_names = list(align_map.keys())\n",
+    "structure_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2104fc56-49b4-45b7-ab48-034eb1099bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
+    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
+    ")\n",
+    "dicom_contours_by_structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f79231a5-b6bb-41d8-953e-c19d2a3eb9da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "    predicted_contours_by_structure, align_map\n",
+    ")\n",
+    "aligned_predicted_contours_by_structure.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "288524c2-a52d-44cb-8f95-24dc40a0e35d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dice = {}\n",
+    "for name in align_map:\n",
+    "    dice[name] = rai.dice_from_contours_by_slice(\n",
+    "        dicom_contours_by_structure[name],\n",
+    "        aligned_predicted_contours_by_structure[name],\n",
+    "    )\n",
+    "\n",
+    "dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc9f846a-8a3f-4297-b828-f9f5c5f0fb87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_contours_by_structure = {\n",
+    "    **predicted_contours_by_structure,\n",
+    "    **dicom_contours_by_structure,\n",
+    "}\n",
+    "\n",
+    "rai.plot_contours_by_structure(\n",
+    "    x_grid, y_grid, image_stack, combined_contours_by_structure, align_map\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8852c6a7-ace4-4e39-933c-ca168156e6f1",
+   "metadata": {},
+   "source": [
+    "## Building our own UNet"
    ]
   },
   {
@@ -98,7 +363,7 @@
     "id": "6020af38-2575-4d06-b5b8-e8edddbf20d3"
    },
    "source": [
-    "## Library imports\n",
+    "### Library imports\n",
     "\n",
     "Here are a set of library imports, from both the standard library and some libraries downloadable from PyPI. These are imported within namespaces so as not to variable and function name conflicts."
    ]
@@ -130,7 +395,7 @@
     "id": "39208213-7fcf-47c6-abb0-d6e64b58cd76"
    },
    "source": [
-    "## Constants"
+    "### Constants"
    ]
   },
   {
@@ -194,7 +459,7 @@
     "id": "8f980fd7"
    },
    "source": [
-    "## Download and investigate the data"
+    "### Download and investigate the data"
    ]
   },
   {
@@ -240,9 +505,9 @@
    },
    "outputs": [],
    "source": [
-    "zip_filepath = \"data.zip\"\n",
+    "zip_filepath = \"data/hnscc.zip\"\n",
     "\n",
-    "data_directory = pathlib.Path(\"data\")\n",
+    "data_directory = pathlib.Path(\"data/hnscc\")\n",
     "\n",
     "if not data_directory.exists():\n",
     "    urllib.request.urlretrieve(zip_url, zip_filepath)\n",
@@ -274,7 +539,7 @@
     "id": "71d8bf21"
    },
    "source": [
-    "## Build the TensorFlow pipeline"
+    "### Build the TensorFlow pipeline"
    ]
   },
   {
@@ -402,7 +667,7 @@
     "id": "038e5131-7eba-441b-93e0-c3129b5f55b3"
    },
    "source": [
-    "## Plotting the pipeline"
+    "### Plotting the pipeline"
    ]
   },
   {
@@ -623,7 +888,7 @@
     "id": "5bc0b6b0-bd49-4009-8b02-cd9544ece837"
    },
    "source": [
-    "## UNet Diagram\n",
+    "### UNet Diagram\n",
     "\n",
     "In this section we will create a Tensorflow Keras 2D UNet model utilising a set of pre-built functions. An example UNet diagram is given below for aiding explanation:\n",
     "\n",
@@ -635,7 +900,7 @@
    "id": "62d76113-47a2-4417-9062-1f7e7deefc1f",
    "metadata": {},
    "source": [
-    "## Activation"
+    "### Activation"
    ]
   },
   {
@@ -700,7 +965,7 @@
    "id": "8891dfcd-b1a3-4b33-aaa0-20bb0a68bcd3",
    "metadata": {},
    "source": [
-    "## Convolution"
+    "### Convolution"
    ]
   },
   {
@@ -816,7 +1081,7 @@
    "id": "c371685d-d248-410c-b15d-a2c4845c88a0",
    "metadata": {},
    "source": [
-    "## Pooling"
+    "### Pooling"
    ]
   },
   {
@@ -884,7 +1149,7 @@
    "id": "6f09298d-6010-4765-aa8f-52f568164f08",
    "metadata": {},
    "source": [
-    "## Convolutional Transpose"
+    "### Convolutional Transpose"
    ]
   },
   {
@@ -970,7 +1235,7 @@
    "id": "68410885-0c26-4335-9b27-73e4c9737011",
    "metadata": {},
    "source": [
-    "## Putting it all together"
+    "### Putting it all together"
    ]
   },
   {
@@ -982,8 +1247,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def convolution(x, number_of_filters, kernel_size=3):\n",
     "    x = tf.keras.layers.Conv2D(\n",
     "        number_of_filters,\n",
@@ -1144,10 +1407,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e677373a-5357-47e1-8ae5-df59081b6973",
+   "metadata": {},
+   "source": [
+    "### Comparison to RAi model\n",
+    "\n",
+    "The model we have built above is actually very similar to the `rai` model used at the beginning of this workshop. The main difference being that the `rai` model is a 3D UNet, whereas we're building a 2D UNet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acf66978-8106-4369-85fa-1c3ff9f22373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37308635-7097-4144-b271-8b9c8e0efcb5",
    "metadata": {},
    "source": [
-    "## Model loss (binary cross entropy)"
+    "### Model loss (binary cross entropy)"
    ]
   },
   {
@@ -1220,7 +1503,7 @@
    "id": "992f95e5-26be-4d8a-8afa-1e3ca19db2cd",
    "metadata": {},
    "source": [
-    "## The model prior to training"
+    "### The model prior to training"
    ]
   },
   {
@@ -1347,20 +1630,7 @@
    "id": "ae4c61a0-8800-4cb8-a26d-f2a6627b6009",
    "metadata": {},
    "source": [
-    "## Training the model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fcf2447-fcc9-4011-bffd-e96eb3e8b178",
-   "metadata": {
-    "id": "7fcf2447-fcc9-4011-bffd-e96eb3e8b178"
-   },
-   "outputs": [],
-   "source": [
-    "# Swap to GPU runtime\n",
-    "# Run all cells"
+    "### Training the model"
    ]
   },
   {
