pip install in its own tab

--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -89,11 +89,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c7d92e1-b929-4ec9-a7b5-a8c142143a99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rai==0.2.0-dev0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0af4dfc1-86be-486d-8074-93189da7403f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rai==0.2.0-dev0\n",
     "import rai\n",
     "rai.__version__"
    ]
