run a single patch first

--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -99,23 +99,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af4dfc1-86be-486d-8074-93189da7403f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import rai\n",
-    "rai.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3bc1660e-2269-4594-a9c7-2ff3d315eb38",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pydicom\n",
     "pydicom.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05cb08df-7356-4d45-a91d-d511581fdee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rai\n",
+    "rai.__version__"
    ]
   },
   {
@@ -202,6 +202,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c9b36d39-0a04-4652-ae67-f30e35ebbb00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_patch = image_stack[None, 13:77, 153:217, 228:292]\n",
+    "image_patch.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "effc6e4c-98a5-4c15-be41-5c74ac1e597e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_masks = rai_model.predict(image_patch)\n",
+    "output_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7d8a1897-beb7-4258-abf8-bf8f0d712843",
    "metadata": {},
    "outputs": [],
@@ -218,6 +240,24 @@
     "predicted_masks = rai.inference_over_jittered_grid(\n",
     "    model=rai_model, image_stack=image_stack, grid=(z, y, x)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26905a76-9466-4620-a967-b734c7ff2c31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65df131d-745c-4b42-916e-1b7868ea3c82",
+   "metadata": {},
+   "source": [
+    "### Extracting contours from the result"
    ]
   },
   {
