dual models now loading, previous approach still working

--- a/prototyping/05-recursive-version.ipynb
+++ b/prototyping/05-recursive-version.ipynb
@@ -83,8 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rai_starting_model, rai_dependent_model = rai.load_model(cfg=raicontours.cfg)"
+    "rai_starting_model, rai_dependent_model = rai.load_model(cfg=cfg)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49d2ebb7-abd3-4b8c-b535-210310f98bd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -105,7 +113,7 @@
    "outputs": [],
    "source": [
     "x_grid, y_grid, image_stack, image_uids = rai.paths_to_image_stack_hfs(\n",
-    "    image_paths\n",
+    "    cfg=cfg, paths=image_paths\n",
     ")"
    ]
   },
@@ -121,7 +129,7 @@
     "x = [210, 230, 250, 270, 290, 310]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    model=rai_model, image_stack=image_stack, grid=(z, y, x)\n",
+    "    cfg=cfg, model=rai_starting_model, image_stack=image_stack, grid=(z, y, x)\n",
     ")"
    ]
   },
@@ -133,7 +141,7 @@
    "outputs": [],
    "source": [
     "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    x_grid, y_grid, predicted_masks\n",
+    "    cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks\n",
     ")\n",
     "\n",
     "predicted_contours_by_structure.keys()"
@@ -259,6 +267,14 @@
     "    x_grid, y_grid, image_stack, combined_contours_by_structure, align_map\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c844fb0b-5e98-455a-8f57-3352b390aa40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
