recursive version working, negligable improvement when already localised

--- a/prototyping/05-recursive-version.ipynb
+++ b/prototyping/05-recursive-version.ipynb
@@ -14,6 +14,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a428ad8-abd1-485b-85bf-54cd2296ec01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import skimage.measure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c3814c86-8748-471b-bb41-3a31bbd9b869",
    "metadata": {},
    "outputs": [],
@@ -120,16 +131,215 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f2e650ce-2ab5-46fd-93f0-403fa8252ccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb710540-d375-4490-a2ce-e9b41cbc420a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_image_stack = skimage.measure.block_reduce(image_stack, block_size=cfg[\"reduce_block_sizes\"][0], func=np.mean)\n",
+    "reduced_image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c699b9d-04a8-417c-b19e-555b82158c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "310 / 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6b18fc55-6207-4951-8927-6c20cc5ea36f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "z = [15, 30]\n",
+    "y = [35, 60]\n",
+    "x = [50, 80]\n",
+    "\n",
+    "predicted_masks = rai.inference_over_jittered_grid(\n",
+    "    cfg=cfg, model=rai_starting_model, grid=(z, y, x), image_stack=reduced_image_stack,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8d8cf9a-8dce-4461-ab7e-d78c3792cafb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicted_masks = rai.inference_over_jittered_grid(\n",
+    "#     cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=predicted_masks\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f51bcd4-8f5b-410c-8f7b-8ec94569f531",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg[\"reduce_block_sizes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5012fcb-e18a-4599-9569-0de0ec55c5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upscaled = predicted_masks\n",
+    "\n",
+    "for i in range(3):\n",
+    "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
+    "\n",
+    "if upscaled.shape[0] != image_stack.shape[0]:\n",
+    "    upscaled = upscaled.astype(np.float32)\n",
+    "    \n",
+    "    upscaled = np.mean([upscaled[1:, ...], upscaled[0:-1, ...]], axis=0)\n",
+    "    assert upscaled.shape[0] == image_stack.shape[0]\n",
+    "    \n",
+    "    upscaled = np.round(upscaled).astype(np.uint8)\n",
+    "    \n",
+    "upscaled.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5372a486-56f7-4f6a-b9f9-f55a6ec6f512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "where_mask = np.where(upscaled > 127.5)\n",
+    "np.min(where_mask, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198822e0-a509-485c-8795-3a07e604c091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(where_mask, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a338a26-bf5b-4c50-ae25-a86f85b9edf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_image_stack = skimage.measure.block_reduce(image_stack, block_size=cfg[\"reduce_block_sizes\"][1], func=np.mean)\n",
+    "reduced_image_stack.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "669f8f6c-ec7a-4b64-ad87-967df94d8ee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "z = [35, 45, 55]\n",
+    "y = [70, 95, 120]\n",
+    "x = [100, 130, 160]\n",
+    "\n",
+    "predicted_masks = rai.inference_over_jittered_grid(\n",
+    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a96db31-fd49-4062-b349-5b538bf26f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da775954-a252-46a5-acfc-6d79b39d7c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.max(predicted_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560f6d51-89ef-4cbf-a7cf-4d3f778d30e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upscaled = predicted_masks\n",
+    "\n",
+    "for i in range(1,3):\n",
+    "    upscaled = np.repeat(upscaled, repeats=2, axis=i)\n",
+    "\n",
+    "if upscaled.shape[0] != image_stack.shape[0]:\n",
+    "    upscaled = upscaled.astype(np.float32)\n",
+    "    \n",
+    "    upscaled = np.mean([upscaled[1:, ...], upscaled[0:-1, ...]], axis=0)\n",
+    "    assert upscaled.shape[0] == image_stack.shape[0]\n",
+    "    \n",
+    "    upscaled = np.round(upscaled).astype(np.uint8)\n",
+    "    \n",
+    "upscaled.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73107915-f68c-494e-808b-9a57674ee07a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "324e2854-eaee-4904-9bbe-8a2ab4f85510",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1621af70-0d0b-481c-b0cc-4d6840903468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = [45, 50, 55]\n",
     "y = [140, 155, 175, 195, 215, 230]\n",
     "x = [210, 230, 250, 270, 290, 310]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_starting_model, image_stack=image_stack, grid=(z, y, x)\n",
+    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=upscaled\n",
     ")"
    ]
   },
@@ -249,6 +459,23 @@
     "    )\n",
     "\n",
     "dice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b828a6e5-9422-4e57-91a8-88efd743de2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# {'Orbit-Lt': 0.9362643339720585,\n",
+    "#  'Orbit-Rt': 0.9118221819034799,\n",
+    "#  'Lacrimal-Lt': 0.5370672348555429,\n",
+    "#  'Lacrimal-Rt': 0.7410031278293367,\n",
+    "#  'Lens-Lt': 0.6199596069529278,\n",
+    "#  'Lens-Rt': 0.5651545326203434,\n",
+    "#  'Optic-Nerve-Lt': 0.6357191302295039,\n",
+    "#  'Optic-Nerve-Rt': 0.682449321749098}"
    ]
   },
   {
