working with more of deep mind reference set

--- a/prototyping/06-loop-last-layer-impact.ipynb
+++ b/prototyping/06-loop-last-layer-impact.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import skimage.measure"
+    "import skimage.measure\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -85,6 +86,16 @@
    "outputs": [],
    "source": [
     "cfg = raicontours.get_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094f0c62-a67e-4d75-9eab-683966f069a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cfg"
    ]
   },
   {
@@ -166,12 +177,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = [15, 30]\n",
-    "y = [35, 60]\n",
-    "x = [50, 80]\n",
+    "z = [0, 30, 60, 90]\n",
+    "y = [30, 60, 90, 120]\n",
+    "x = [30, 60, 90]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
     "    cfg=cfg, model=rai_starting_model, grid=(z, y, x), image_stack=reduced_image_stack,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50351eb4-42b4-477f-aa78-dfe354611644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_x_grid = skimage.measure.block_reduce(x_grid, block_size=cfg[\"reduce_block_sizes\"][0][2], func=np.mean)\n",
+    "reduced_y_grid = skimage.measure.block_reduce(y_grid, block_size=cfg[\"reduce_block_sizes\"][0][1], func=np.mean)\n",
+    "\n",
+    "reduced_predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg, x_grid=reduced_x_grid, y_grid=reduced_y_grid, masks=predicted_masks\n",
+    ")\n",
+    "rai.plot_contours_by_structure(\n",
+    "    reduced_x_grid, reduced_y_grid, reduced_image_stack, reduced_predicted_contours_by_structure\n",
     ")"
    ]
   },
@@ -259,12 +288,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = [35, 45, 55]\n",
-    "y = [70, 95, 120]\n",
-    "x = [100, 130, 160]\n",
+    "z = [0, 30, 60, 90, 120, 150, 180]\n",
+    "y = [60, 90, 120, 150, 180, 210, 240, 270]\n",
+    "x = [70, 100, 130, 160, 190, 220, 250]\n",
     "\n",
     "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled\n",
+    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=reduced_image_stack, masks_stack=upscaled, max_batch_size=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "365c14e9-112b-4034-a7d4-6ebe02c9a0c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reduced_x_grid = skimage.measure.block_reduce(x_grid, block_size=cfg[\"reduce_block_sizes\"][1][2], func=np.mean)\n",
+    "reduced_y_grid = skimage.measure.block_reduce(y_grid, block_size=cfg[\"reduce_block_sizes\"][1][1], func=np.mean)\n",
+    "\n",
+    "reduced_predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg, x_grid=reduced_x_grid, y_grid=reduced_y_grid, masks=predicted_masks\n",
+    ")\n",
+    "rai.plot_contours_by_structure(\n",
+    "    reduced_x_grid, reduced_y_grid, reduced_image_stack, reduced_predicted_contours_by_structure\n",
     ")"
    ]
   },
@@ -314,10 +361,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0716adaf-53dd-4e81-b5b0-ed6210cd87c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "structure_ds = pydicom.read_file(structure_path)\n",
+    "[item.ROIName for item in structure_ds.StructureSetROISequence]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "73107915-f68c-494e-808b-9a57674ee07a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "align_map = {\n",
+    "    \"Brain\": [TG263.Brain],\n",
+    "    \"Brainstem\": [TG263.Brainstem],\n",
+    "    \"Cochlea-Lt\": [TG263.Cochlea_L],\n",
+    "    \"Cochlea-Rt\": [TG263.Cochlea_R],\n",
+    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
+    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
+    "    \"Lens-Lt\": [TG263.Lens_L],\n",
+    "    \"Lens-Rt\": [TG263.Lens_R],\n",
+    "    \"Lung-Lt\": [TG263.Lung_L],\n",
+    "    \"Lung-Rt\": [TG263.Lung_R],\n",
+    "    \"Mandible\": [TG263.Bone_Mandible],\n",
+    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
+    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
+    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
+    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
+    "    \"Parotid-Lt\": [TG263.Parotid_L],\n",
+    "    \"Parotid-Rt\": [TG263.Parotid_R],\n",
+    "    \"Spinal-Cord\": [TG263.SpinalCord],\n",
+    "    \"Submandibular-Lt\": [TG263.Glnd_Submand_L],\n",
+    "    \"Submandibular-Rt\": [TG263.Glnd_Submand_R],\n",
+    "}\n",
+    "structure_names = list(align_map.keys())\n",
+    "\n",
+    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
+    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
+    ")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -334,186 +421,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "z = [0, 30, 60, 90, 120]\n",
+    "y = [130, 160, 190, 220, 250, 280, 310, 340]\n",
+    "x = [180, 210, 240, 270, 300, 330]\n",
+    "\n",
     "predicted_masks = upscaled\n",
     "\n",
-    "for i in range(4):\n",
-    "    z = [35, 40, 45, 50, 55]\n",
-    "    y = [140, 155, 175, 195, 215, 230]\n",
-    "    x = [210, 230, 250, 270, 290, 310]\n",
-    "\n",
+    "looped_dice = []\n",
+    "for i in range(5):\n",
     "    predicted_masks = rai.inference_over_jittered_grid(\n",
     "        cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=predicted_masks\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a150c2e9-1a74-42e6-9e1d-d34c0c1432f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_masks = rai.inference_over_jittered_grid(\n",
-    "    cfg=cfg, model=rai_dependent_model, grid=(z, y, x), image_stack=image_stack, masks_stack=predicted_masks\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5726c47d-78d3-4db1-b388-0ed972552ede",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks\n",
-    ")\n",
-    "\n",
-    "predicted_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f1ef46b-9e7e-4128-bddd-8e9ca1d34cec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rai.plot_contours_by_structure(\n",
-    "    x_grid, y_grid, image_stack, predicted_contours_by_structure\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d1a1e444-81b1-4832-bdcf-3ba7cd1626ce",
-   "metadata": {},
-   "source": [
-    "## Compare to DICOM-RT Structure"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1213988-d736-4b2b-a7c5-d0056d822234",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_ds = pydicom.read_file(structure_path)\n",
-    "[item.ROIName for item in structure_ds.StructureSetROISequence]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b0c7fc0-5e3c-4962-9e5a-30d656661696",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "align_map = {\n",
-    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
-    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
-    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
-    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
-    "    \"Lens-Lt\": [TG263.Lens_L],\n",
-    "    \"Lens-Rt\": [TG263.Lens_R],\n",
-    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
-    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb528e9a-b338-4e20-a2ba-3ca6095d044e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "structure_names = list(align_map.keys())\n",
-    "structure_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e85ac24-f3f6-4b60-86ed-c5321f121e61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
-    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    ")\n",
-    "dicom_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5cbd665-ec40-4e2c-85fd-1163fda0703f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "    predicted_contours_by_structure, align_map\n",
-    ")\n",
-    "aligned_predicted_contours_by_structure.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a9bf27e-bbb2-4e61-b0af-2609025a3ec8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dice = {}\n",
-    "for name in align_map:\n",
-    "    dice[name] = rai.dice_from_contours_by_slice(\n",
-    "        dicom_contours_by_structure[name],\n",
-    "        aligned_predicted_contours_by_structure[name],\n",
     "    )\n",
-    "\n",
-    "dice"
+    "    \n",
+    "    \n",
+    "    predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "        cfg=cfg, x_grid=x_grid, y_grid=y_grid, masks=predicted_masks\n",
+    "    )\n",
+    "    \n",
+    "    aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "        predicted_contours_by_structure, align_map\n",
+    "    )\n",
+    "    \n",
+    "    dice = {}\n",
+    "    for name in align_map:\n",
+    "        dice[name] = rai.dice_from_contours_by_slice(\n",
+    "            dicom_contours_by_structure[name],\n",
+    "            aligned_predicted_contours_by_structure[name],\n",
+    "        )\n",
+    "        \n",
+    "    looped_dice.append(dice)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b828a6e5-9422-4e57-91a8-88efd743de2a",
+   "id": "b2a019aa-ff96-42b9-90f1-b8f1d69d71ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {'Orbit-Lt': 0.9362643339720585,\n",
-    "#  'Orbit-Rt': 0.9118221819034799,\n",
-    "#  'Lacrimal-Lt': 0.5370672348555429,\n",
-    "#  'Lacrimal-Rt': 0.7410031278293367,\n",
-    "#  'Lens-Lt': 0.6199596069529278,\n",
-    "#  'Lens-Rt': 0.5651545326203434,\n",
-    "#  'Optic-Nerve-Lt': 0.6357191302295039,\n",
-    "#  'Optic-Nerve-Rt': 0.682449321749098}"
+    "for name in structure_names:\n",
+    "    dice = []\n",
+    "    for item in looped_dice:\n",
+    "        dice.append(item[name])\n",
+    "        \n",
+    "    plt.plot(dice, label=name)\n",
+    "    \n",
+    "plt.legend()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e309efd1-5f58-4465-b24c-45d6f201ade7",
+   "id": "d267157e-25c6-40ae-b948-5cbd32d4d78f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {'Orbit-Lt': 0.9373359477378552,\n",
-    "#  'Orbit-Rt': 0.9113421598778818,\n",
-    "#  'Lacrimal-Lt': 0.5363035517347803,\n",
-    "#  'Lacrimal-Rt': 0.6471835776059125,\n",
-    "#  'Lens-Lt': 0.5794501251828946,\n",
-    "#  'Lens-Rt': 0.7313020381451935,\n",
-    "#  'Optic-Nerve-Lt': 0.684091594978361,\n",
-    "#  'Optic-Nerve-Rt': 0.7138739867025855}"
+    "# predicted_contours_by_structure"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f6ea89-0391-4bee-895b-9e888f405049",
+   "id": "fc3f0eb4-ac4b-4402-aec3-47c6aaef28e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -521,103 +490,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b6a922-ac7c-4cbb-9a0e-e9f840804952",
+   "id": "e2978db2-8be8-4d94-906b-5ef3060bdd39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {'Orbit-Lt': 0.9329802027327212,\n",
-    "#  'Orbit-Rt': 0.9292203655627251,\n",
-    "#  'Lacrimal-Lt': 0.5592778493774634,\n",
-    "#  'Lacrimal-Rt': 0.7033117079481864,\n",
-    "#  'Lens-Lt': 0.5634343902399727,\n",
-    "#  'Lens-Rt': 0.705192510533307,\n",
-    "#  'Optic-Nerve-Lt': 0.6856992769482004,\n",
-    "#  'Optic-Nerve-Rt': 0.7298940044091032}"
+    "rai.plot_contours_by_structure(\n",
+    "    x_grid, y_grid, image_stack, predicted_contours_by_structure, align_map\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2804abdd-82ad-4d5e-b1d8-edb9b49a8169",
+   "id": "c28e7299-755e-4832-b9f6-92b83572f5e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# {'Orbit-Lt': 0.9305747733824346,\n",
-    "#  'Orbit-Rt': 0.910793750098107,\n",
-    "#  'Lacrimal-Lt': 0.5935095702014695,\n",
-    "#  'Lacrimal-Rt': 0.7100921000984858,\n",
-    "#  'Lens-Lt': 0.5989498141190633,\n",
-    "#  'Lens-Rt': 0.719354923884271,\n",
-    "#  'Optic-Nerve-Lt': 0.6913394086656418,\n",
-    "#  'Optic-Nerve-Rt': 0.7227423217545667}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6690c8d9-bc44-4f35-8172-b00d05b2b6e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {'Orbit-Lt': 0.9300944496577743,\n",
-    "#  'Orbit-Rt': 0.9058749383004636,\n",
-    "#  'Lacrimal-Lt': 0.5882465946938259,\n",
-    "#  'Lacrimal-Rt': 0.7160347725352805,\n",
-    "#  'Lens-Lt': 0.6106324895768452,\n",
-    "#  'Lens-Rt': 0.7109035771108655,\n",
-    "#  'Optic-Nerve-Lt': 0.6932087812283164,\n",
-    "#  'Optic-Nerve-Rt': 0.718207519345175}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c849dc0-9d0c-409a-84b7-c5614082155c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {'Orbit-Lt': 0.9301188710327498,\n",
-    "#  'Orbit-Rt': 0.904238953690376,\n",
-    "#  'Lacrimal-Lt': 0.5923609038362603,\n",
-    "#  'Lacrimal-Rt': 0.7161445302661364,\n",
-    "#  'Lens-Lt': 0.6271590117562696,\n",
-    "#  'Lens-Rt': 0.711952599045201,\n",
-    "#  'Optic-Nerve-Lt': 0.6928188112434206,\n",
-    "#  'Optic-Nerve-Rt': 0.719606212923026}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92f9b435-d223-4ae8-9998-bcd3426c89c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {'Orbit-Lt': 0.9294303562741772,\n",
-    "#  'Orbit-Rt': 0.9038576742036607,\n",
-    "#  'Lacrimal-Lt': 0.5945729841044676,\n",
-    "#  'Lacrimal-Rt': 0.7165850979138209,\n",
-    "#  'Lens-Lt': 0.6335797569609779,\n",
-    "#  'Lens-Rt': 0.7088506798601667,\n",
-    "#  'Optic-Nerve-Lt': 0.6948517323062952,\n",
-    "#  'Optic-Nerve-Rt': 0.7192801382645814}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0f39f6b-46aa-4714-a14b-06e11facd0ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# {'Orbit-Lt': 0.9294079306503369,\n",
-    "#  'Orbit-Rt': 0.9026140401337023,\n",
-    "#  'Lacrimal-Lt': 0.5920014348952012,\n",
-    "#  'Lacrimal-Rt': 0.7179298548149553,\n",
-    "#  'Lens-Lt': 0.6312570186088973,\n",
-    "#  'Lens-Rt': 0.7088131001839902,\n",
-    "#  'Optic-Nerve-Lt': 0.6940026006174406,\n",
-    "#  'Optic-Nerve-Rt': 0.7205659434474421}"
+    "renamed_dicom_contours_by_structure = {\n",
+    "    f\"DICOM {key}\": item for key, item in dicom_contours_by_structure.items()\n",
+    "}"
    ]
   },
   {
@@ -629,7 +520,7 @@
    "source": [
     "combined_contours_by_structure = {\n",
     "    **predicted_contours_by_structure,\n",
-    "    **dicom_contours_by_structure,\n",
+    "    **renamed_dicom_contours_by_structure,\n",
     "}\n",
     "\n",
     "rai.plot_contours_by_structure(\n",
